css/styles.css
/* Font Face Imports */

@font-face {
    font-family: pr-viking;
    src: url(pr-viking.ttf);
}

@font-face {
    font-family: bebasneue-regular;
    src: url(bebasneue-regular.ttf);
}

/* Applications of font to content */

header {
    padding-bottom: 20px;
    padding-top: 5px;
}

.heading {
    font-family: pr-viking, 'Franklin Gothic Medium', 'Arial Narrow', sans-serif;
    font-weight: bold;
    list-style-type: none;
    display: inline;
    font-size: 48px; 
    color: white;
    
    }

.subheading {
    font-family: pr-viking, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: lighter;
    font-size: 28px;
    color: white;
}

.body {
    font-family: bebasneue-regular, Arial, Helvetica, sans-serif;
    font-size: 20px;
    color: white;
    padding-left: 0px;
}

.est {
    font-family: pr-viking, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 36px;
    text-align: center;
    color: white;

}

/* page styling */

body {
    background-color: black;
}

/* navigation styling */

.navlist {
    
    font-family: bebasneue-regular, Arial, Helvetica, sans-serif;
    text-align: center;
    list-style-type: none;
    display: inline;
    padding-right: 35px;
    font-size:28px;
    float: right;
}
header > a  {
    color: gray;
    text-decoration: none;
}
header > a:hover {

    color: blue;

}
li {
    display: inline-block;

}

/* Image Element Styling */

.img {
    position: static;
    width: 100%;
    
}

/* Show Page Styling */

.show {

    vertical-align: text-top;
    text-align: center;
    display: inline-block;
    width: 32%;
    padding-left: 3px; 
    padding-right: 3px;
    height: 100%;

}

.video {
    width: 454px; 
    height: 315px;
}

.csoon {
    text-align: center;
}

/* Main Body Styling */

.mainbody {

    vertical-align: text-top;
    text-align: center;
    display: inline-block;
    width: 32%;
    padding-left: 8px;
    padding-right: 8px;
}

/* Form Styling */

#form {
    text-align: center;
    margin-bottom: 20px;
}


.button {
    font-family:  BebasNeue-Regular, Arial, Helvetica, sans-serif;
    padding-top: 25px;
    text-decoration: none;
}


.inpad {
    padding-bottom: 10px;
}

/* Social elements styling */

#socials {

    font-family: BebasNeue-Regular, Arial, Helvetica, sans-serif;
    list-style-type: none;
    display: inline;
    font-size: 28px;
    word-spacing: 45px;
}


.timeline {
    vertical-align: text-top;
    text-align: center;
    display: inline-block;
    width: 32%;
    margin-left: 3px; 
    margin-right: 3px;
    height: 100%;
}

/* Footer Styling */

footer {
    text-align: center;
    padding-top: 10px;

}

footer > ul > li > a {
    text-decoration: none;
    color: gray;
}

footer > ul > li > a:hover {

    color: blue;
}

/* Responsive Element Stylings */

@media only screen and (max-width:1400px) {

    .heading {
        font-size: medium;
    }
    .est {
        font-size: medium;
    }
    .subheading{
        font-size: medium;
    }

    .navlist{
        font-size: medium;
        padding-right: 5px;
        
    }
    .mainbody{
        vertical-align: text-top;
        text-align: center;
        width: 100%;
        padding-left: 0px;

    }
    #socials {
        text-align: left;
        padding-top: 10px;
        font-size: medium;
        word-spacing: 24px;
    }
    .show {
        width: 100%;
    }
    .video {
        width: 100%;
        
    }
    .timeline {
        width: 100%;
    }
}

@media only screen and (max-width:1500px) {

    .heading {
        font-size: x-large;
    }
    .est {
        font-size: x-large;
    }
    .subheading{
        font-size: large;
    }
    .mainbody {
        padding-left: 0px;
    }

    .navlist{
        font-size: large;
    }
    
    .show {
        width: 90%;
    }
    .video {
        width: 90%;
       
    }
    .timeline {
        width: 100%;
    }
    #socials {
        font-size: large;
        text-align: center;
    }
    .instagram-media {
        width: 100%;
    }
}

